src/scss/_site-footer.scss
.site-footer {
  margin: 0 auto;
  padding: 72px 0;
  max-width: 64ch;
}

.site-footer__nav {
  display: inline-flex;
  margin: 0;
  padding: 0;
  list-style: none;
}

.site-footer__nav-item {
  margin-left: 16px;
  font-size: 0.8rem;

  &:first-child {
    margin: 0;
  }

  a {
    color: $text-caption-color;
    text-decoration-color: $text-caption-color;

    &:hover {
      color: $brand-color;
      text-decoration-color: $brand-color;
    }
  }
}

